--- a/app/views/navigation.jade
+++ b/app/views/navigation.jade
@@ -34,7 +34,8 @@ nav.navbar.navbar-default.navbar-fixed-top(data-ng-controller='AuthCtrl')
 
             div(ng-show='isAuthenticate')
                 .nav.navbar-nav.navbar-right.header-select(ng-controller='LoginInfoCtrl')
-                    ui-select(ng-model='currentOrganization' theme='bootstrap')
-                        ui-select-match(placeholder='Select an organization') {{$select.selected.name}}
-                        ui-select-choices(repeat='organization in organizations  | filter: { orgName: $select.search }' value='{{$select.selected.name}}')
-                            div(ng-bind-html='organization.name | highlight: $select.search')
+                    ui-select#organizationSelect(required="", name="orgSelect0", ng-model="currentOrganization", theme="bootstrap")
+                        ui-select-match(placeholder="Select an organization") {{$select.selected.name}}
+                        ui-select-choices(repeat="organization.id as organization in organizations  | filter: { name: $select.search }", value="{{$select.selected.name}}")
+                            div(ng-bind-html="organization.name | highlight: $select.search")
+
